--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "^4.5.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-ble-plx": "^3.1.2",
+    "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
