--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "base-64": "^1.0.0",
+    "btoa": "^1.2.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-ble-plx": "^3.1.2",
